--- a/languages/ocaml/playlists/p.txt
+++ b/languages/ocaml/playlists/p.txt
@@ -5,6 +5,7 @@
 
 @@@Libraries
 ##Ocaml Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/ocaml/ocaml_libraries.txt
+##Elixir Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/elixir/elixir_libraries.txt
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries/cpp_libraries.txt
 ##C Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries/go_libraries.txt
