added python and fastapi

--- a/languages/cherrypy/playlists/p.txt
+++ b/languages/cherrypy/playlists/p.txt
@@ -1,5 +1,8 @@
-@@@Python Frameworks
-##Flask Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/flask/flask.txt
+@@@Learn Python
+Python Programming Language=>https://apps.clemy.top/languages/python/python.txt
+
+@@@Other Python Frameworks
+##Flask Web Framework-->https://apps.clemy.top/languages/flask/flask.txt
 
 @@@Python Frameworks
 ##Python Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/python_libraries/python_libraries.txt
