--- a/languages/julia/playlists/p.txt
+++ b/languages/julia/playlists/p.txt
@@ -1,3 +1,6 @@
+@@@Julia Web Framework
+##Genie Web Framework-->https://apps.clemy.top/languages/julia/genie.txt
+
 @@@Native Languages
 ##Erlang Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/erlang/erlang.txt
 ##Fortran Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/fortran/fortran.txt
